--- a/WebShopCage.Infrastruture.Data/WebShopCage.Infrastruture.Data.csproj
+++ b/WebShopCage.Infrastruture.Data/WebShopCage.Infrastruture.Data.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0-preview2-35157" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.2.0-preview2-35157" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0-preview2-35157" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WebShopCage.core.entity\WebShopCage.core.entity.csproj" />
     <ProjectReference Include="..\WebShopCage.core\WebShopCage.core.csproj" />
   </ItemGroup>
